syntax = "proto3";
option csharp_namespace = "GrpcShoppingCartService";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service GrpcShoppingCartService {
    rpc AddShoppingCart(GrpcShoppingCartDto) returns (google.protobuf.StringValue);
    rpc AddShoppingItem(GrpcAddShoppingCartItemCommandDto) returns (google.protobuf.Empty);
    rpc UpdateShoppingItem(GrpcUpdateShoppingCartItemCommandDto) returns (google.protobuf.Empty);
    rpc DeleteShoppingItem(GrpcDeleteShoppingCartItemCommandDto) returns (google.protobuf.Empty);
    rpc CheckoutShoppingCart(google.protobuf.StringValue) returns (google.protobuf.Empty);
    rpc GetOrderDetails(GrpcOrderDetailsRequest) returns (GrpcShoppingCartDto);
    rpc GetShoppingCartByUsername(google.protobuf.StringValue) returns (GrpcShoppingCartDto);
}

message GrpcShoppingCartDto {
    optional string id = 1; 
    string username = 2;
    repeated GrpcShoppingItemDto shopping_items = 3;
}

message GrpcInventoryDto {
    string id = 1; 
    string name = 2;
    string description = 3;
    int32 in_stock = 4;
    double height = 5;
    double width = 6;
    double weight = 7;
    double price = 8;
}

message GrpcShoppingItemDto {
    string shopping_cart_id = 1;
    string inventory_id = 2;
    int32 quantity = 3;
    float total_price = 4;
}

message GrpcAddShoppingCartItemCommandDto{
    string shopping_cart_id = 1;
    GrpcInventoryDto inventory = 2;
    int32 quantity = 3;
    string username = 4;
}

message GrpcUpdateShoppingCartItemCommandDto{
    string shopping_cart_id = 1;
    GrpcInventoryDto inventory = 2;
    int32 quantity = 3;
    string username = 4;
}

message GrpcDeleteShoppingCartItemCommandDto{
    string shopping_cart_id = 1;
    GrpcInventoryDto inventory = 2;
    string username = 4;
}


message GrpcOrderDetailsRequest {
    string cart_id = 1;
}



